# chop_doc

./: .gitignore  makefile  pyproject.toml  setup.py  test_main.py
chop_doc/: __init__.py  main.py
src/: __init__.py
src/chop_doc/: main.py
tests/: test_main.py
