[project]
name = "chopdoc"
version = "0.1.0"
readme = "README.md"
authors = [
  { name="Samuel Silva", email="samuelhs98@gmail.com" },
]
description = "A easy way to split documents in chunks"
requires-python = ">=3.11.5"
dependencies = [
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "pytest-cov>=6.1.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
develop = [
    "sentence-transformers==3.1.0",
    "setuptools>=80.1.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/samuhs/chop_doc"
Issues = "https://github.com/samuhs/chop_doc/issues"
